src/index.css
:root {
    color-scheme: light dark;
    --bg-color: light-dark(#f7f7f7, #141414);
    --txt-color: light-dark(#141414, #f7f7f7);
    --border-color: light-dark(rgba(54, 54, 54, 0.258), #f7f7f73f);
}

html, body{
    height: 100vh;
    width: 100vw;
    margin: 0;
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--bg-color);
    text-align: center;
    font-style: normal;
    font-family: "openrunde";
}

@font-face {
    font-weight: bold;
    font-family: "openrunde";
    src: url("/openrunde-medium.woff");
}

@font-face {
    font-style: normal;
    font-family: "openrunde";
    src: url("/openrunde-regular.woff");
}

.logo {
    font-weight: bold;
    font-size: 80px;
    cursor: pointer;
    color: var(--txt-color);
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
}

.search-box {
    display: flex;
    flex-direction: row;
    box-sizing: border-box;
    border-radius: 8px;
    border: 0.5px var(--border-color) solid;
    padding: 12px;
    width: 60vw;
    max-width: 700px;
    min-width: 250px;
    background-color: var(--bg-color);
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.052);
    margin: auto
}

.search-box input {
    font-family: "openrunde";
    background-color: transparent;
    border: none;
    outline: none;
    font-size: 15px;
    width: 85%;
    padding: 8px 5px 8px;
}

.search-box button {
    background-color: var(--txt-color);
    color: var(--bg-color);
    border: 0.5px var(--border-color) solid;
    border-radius: 4px;
    box-sizing: border-box;
    padding: 5px 10px;
    font-size: 14px;
    margin-left: auto;
    width: fit-content;
    transition: 1s cubic-bezier(0.075, 0.82, 0.165, 1);
}

button {
    cursor: pointer;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
}

.settings-button {
    background-color: transparent;
    font-weight: bold;
    border: none; 
    margin: 0px 0px 30px;
    padding: 10px;
    opacity: 0.5;
}

.settings {
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    border-radius: 8px;
    border: 0.5px var(--border-color ) solid;
    padding: 30px 30px;
    width: fit-content;
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.052);
    margin: auto;
}

.input-box {
    display: flex;
    flex-direction: row;
    box-sizing: border-box;
    border-radius: 8px;
    position: fixed;
    left: 0;
    right: 0;
    margin: 0 auto;
    border: 0.5px var(--border-color) solid;
    padding: 12px;
    width: 90vw;
    max-width: 700px;
    min-width: 250px;
    bottom: 25px;
    background-color: var(--bg-color);
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.052);
}

.input-box input {
    font-family: "openrunde";
    background-color: transparent;
    border: none;
    outline: none;
    font-size: 15px;
    width: 85%;
    padding: 8px 5px 8px;
}

.input-box button {
    background-color: var(--txt-color);
    color: var(--bg-color);
    border: 0.5px var(--border-color) solid;
    border-radius: 5px;
    box-sizing: border-box;
    padding: 9px 20px;
    font-size: 14px;
    width: fit-content;
    margin-left: auto;
    transition: 1s cubic-bezier(0.075, 0.82, 0.165, 1);
}

.user-msg {
    margin-left: auto;
    margin-right: 10px;
    margin-top: 35px;
    margin-bottom: 35px;
    background-color: var(--txt-color);
    padding: 12px;
    width: fit-content;
    color: var(--bg-color);
    border-radius: 8px;
}

.ai-msg {
    width: 60vw;
}

.back-btn {
    position: fixed;
    top: 15px;
    left: 10px;
    background-color: transparent;
    color: var(--txt-color);
    padding: 5px 10px;
    border: none;
    border-radius: 3px;
}

